<resources>
    <string name="firebase_database_url">https://w23-csci3130-group-17-default-rtdb.firebaseio.com/</string>
    <string name="push_notification_endpoint">https://fcm.googleapis.com/fcm/send</string>
    <string name="FIREBASE_SERVER_KEY">AAAAxboTxUY:APA91bEb4AHqF1QrCK0Xk2wNCxSP40PVk9jg2FyNwD3VILMrxUUol1m7yrCPWKCNYtco1y8ClnImBQEUnrv3cFdGRYJXXr5QCVyGwznjFZbDKHFBwfuGpP53NopyV32HL70QX2kFs6NU</string>

    <string name="app_name">Barter Trader</string>
    <string name="EMPTY_STRING" />
    <string name="EMPTY_EMAIL">Please enter an email id to sign up with.</string>
    <string name="INVALID_EMAIL">Please enter a valid email address.</string>
    <string name="USED_EMAIL">This email already has an account! Please log in, or use a different email.</string>
    <string name="EMPTY_PASSWORD">Please enter a password for your account.</string>
    <string name="DIFFERENT_PASSWORDS">Please make sure both passwords are matching!</string>
    <string name="INVALID_PASSWORD">Password may only contain allowing characters [A–Za–z0–9]</string>
    <string name="SHORT_PASSWORD">Password must contain 6 or more characters.</string>


    <string name="EMPTY_EMAIL_LOGIN">Please enter an email to login with.</string>
    <string name="EMPTY_PASSWORD_LOGIN">Password field cannot be left empty!</string>
    <string name="INCORRECT_PASSWORD_LOGIN">Invalid email/password. Please try again.</string>
    <string name="NEW_EMAIL_LOGIN">This email is not registered. Please sign up.</string>
...
