<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Homepages.Signup">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="57dp">

        <EditText
            android:id="@+id/emailReg"
            android:layout_width="369dp"
            android:layout_height="77dp"
            android:layout_margin="16dp"
            android:autofillHints=""
            android:hint="Email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/passwordReg"
            android:layout_width="369dp"
            android:layout_height="77dp"
            android:layout_margin="16dp"
            android:hint="Password"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/passwordConfirm"
            android:layout_width="369dp"
            android:layout_height="77dp"
            android:layout_margin="16dp"
            android:hint="Confirm Password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/signupButton"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:text="Sign Up" />

        <TextView
            android:id="@+id/errorLabelReg"
            android:layout_width="207dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/EMPTY_STRING"
            android:textColor="#DC1616" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/backButton"
            android:layout_width="105dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:onClick="backButton"
            android:text="Back" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>