...
        android:gravity="center"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="57dp">

        <EditText
            android:id="@+id/emailLogin"
            android:layout_width="369dp"
            android:layout_height="97dp"
            android:layout_margin="16dp"
            android:autofillHints=""
            android:hint="Email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/passwordLogin"
            android:layout_width="369dp"
            android:layout_height="97dp"
            android:layout_margin="16dp"
            android:hint="Password"
            android:inputType="textPassword" />

...
